Bug 823191 - DeviceStorage enumerate doesn't see files with 0060 perms. r=bent a=blocking-basecamp